--- a/config.lua.dist
+++ b/config.lua.dist
@@ -80,7 +80,7 @@ mysqlSock = ""
 -- may cause high CPU usage with many players and potentially affect performance!
 -- NOTE: forceMonsterTypesOnLoad loads all monster types on startup to validate them.
 -- You can disable it to save some memory if you don't see any errors at startup.
--- checkDuplicateStorageKeys checks the values stored in the variables for duplicates. If it finds equal values, the server is shut down to prevent bugs.
+-- checkDuplicateStorageKeys checks the values stored in the variables for duplicates.
 allowChangeOutfit = true
 freePremium = false
 kickIdlePlayerAfterMinutes = 15
