--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,11 +53,7 @@ else ()
 endif ()
 option(USE_LUAJIT "Use LuaJIT" ${FORCE_LUAJIT})
 
-if (FORCE_LUAJIT)
-    if (APPLE)
-        set(CMAKE_EXE_LINKER_FLAGS "-pagezero_size 10000 -image_base 100000000")
-    endif ()
-else ()
+if (NOT FORCE_LUAJIT)
     find_package(Lua REQUIRED)
 endif ()
 
